test/param/functions/paramMinMax.good
paramMinMax.chpl:9: error: small = 1, big = 2
